--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "icon.jpeg", 
+      "src": "icon.png", 
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
